--- a/app/views/tours/step1.html.erb
+++ b/app/views/tours/step1.html.erb
@@ -2,18 +2,18 @@
 <section class="section mb-5">
   <div class="container p-0 m-0">
     <div class="row no-gutters <%= @tour.selected_theme == 'dark' ? 'bg-black' : ''%>">
-      <h2 class="<%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>">
+      <h5 class="<%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>">
         Use the layout below to modify photos and / or information by clicking on the different elements. You will be able to review the final output in the last step.
         <small class="text-muted <%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>">(note that the display is approximate)</small>
-      </h2>
-      <div class="col-6" style="padding-top: 200px">
+      </h5>
+      <div class="col-6" style="padding-top: 50px">
       <% if Faraday.head("https://www.cotala.com/tours/#{@tour.cotala_tour_id}/Floorplan_Branded.jpg").status == 200 %>
         <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/Floorplan_Branded.jpg", style: 'width: 100%; padding-right: 20px' %>
       <% else %>
         <%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/FullPublic.jpg", style: 'width: 100%; padding-right: 20px' %>
       <% end %>
       </div>
-      <div class="col-6" style="padding-top: 200px">
+      <div class="col-6" style="padding-top: 50px">
         <div class="row no-gutters">
           <div class="col-6" >
             <h6 class="<%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>">Listing Features</h6>
@@ -34,7 +34,7 @@
         </div>
           <div class="row no-gutters pt-4">
           <div class="col-4">
-            <%= image_tag @tour.agent_headshot_url, style: "width:150px; height: 150px; border-radius: 50%;margin-left: 30px" if @tour.agent_headshot_url.present? %>
+            <%= image_tag @tour.agent_headshot_url, style: "width:150px; height: 150px; border-radius: 50%;margin-left: 30px" if @tour.agent_headshot_url.present? && Faraday.head(@tour.agent_headshot_url).status == 200%>
           </div>
           <div class="col-5">
             <span id="agent_name_modal_link" class="d-block text-decoration-underline modal-link <%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>"><%= @tour.agent_name %> </span>
@@ -74,6 +74,7 @@
   document.addEventListener("turbolinks:load", function() {
     $('.modal-link').on("click", function() {
       const modalId = $(this)[0].id.replace('_link','');
+      console.log(modalId, 'modalId')
       $(`#${modalId}`).modal('show')
     })
     $('#images_modal_link').on("click", function() {
