--- a/app/views/tours/first_page/_images_modal.html.erb
+++ b/app/views/tours/first_page/_images_modal.html.erb
@@ -15,7 +15,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary close" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary save">Save changes</button>
+        <button type="button" class="btn btn-primary save-images">Save changes</button>
       </div>
     </div>
   </div>
@@ -25,7 +25,7 @@
     $('.close').on("click", function() {
       $('#images_modal').modal('hide')
     })
-    $('.save').on("click", function() {
+    $('.save-images').on("click", function() {
       $('#images_modal').modal('hide')
     })
   })
