--- a/app/views/tours/step2.html.erb
+++ b/app/views/tours/step2.html.erb
@@ -2,13 +2,13 @@
 <section class="section mb-5">
   <div class="container p-0 m-0">
     <div class="row no-gutters <%= @tour.selected_theme == 'dark' ? 'bg-black' : ''%>">
-      <div class="col-6" style="padding-top: 200px">
+      <div class="col-6" style="padding-top: 0px">
         <div class="row no-gutters">
-          <h1 class="<%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>"><%= @tour.listing_address %></h1>
+          <h4 class="<%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>"><%= @tour.listing_address %></h4>
         </div>
         <div class="row no-gutters">
           <span id="price_modal_link" class="text-decoration-underline modal-link">
-            LISTED FOR<h1 class="d-inline-block pl-4 <%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>">$<%= @tour.price %></h1>
+            LISTED FOR <h4 class="d-inline-block pl-4 <%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>">$<%= @tour.price %></h4>
           </span>
         </div>
         <div class="row no-gutters">
@@ -16,9 +16,9 @@
             <p class="<%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>"><%= @tour.description %></p>
           </span>
         </div>
-        <div class="row no-gutters">
-          <div class="col-2">
-            <span id="lot_modal_link" class="text-decoration-underline modal-link <%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>">
+        <div class="row no-gutters px-3">
+          <div class="col-3 px-0">
+            <span id="lot_modal_link" style="font-size: 12px"class="text-decoration-underline modal-link <%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>">
               <% if @tour.lot_or_maint == true%>
               LOT <%= @tour.lot_maint %> SF
               <% else %>
@@ -26,31 +26,31 @@
               <% end %>
             </span>
           </div>
-          <div class="col-2">
-            <span id="size_modal_link" class="text-decoration-underline modal-link <%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>">
-              SIZE <%= @tour.size %> SF
+          <div class="col-3 px-0">
+            <span id="size_modal_link" style="font-size: 12px"class="text-decoration-underline modal-link <%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>">
+              SIZE <strong class="ms-3"><%= @tour.size %> SF</strong>
             </span>
           </div>
-          <div class="col-2">
-            <span id="bedrooms_modal_link" class="text-decoration-underline modal-link <%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>">
+          <div class="col-2 px-0 text-center">
+            <span id="bedrooms_modal_link" style="font-size: 12px"class="text-decoration-underline modal-link <%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>">
               <%= @tour.bedrooms %> BED
             </span>
           </div>
-          <div class="col-2">
-            <span id="bathrooms_modal_link" class="text-decoration-underline modal-link <%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>">
+          <div class="col-2 px-0">
+            <span id="bathrooms_modal_link" style="font-size: 12px"class="text-decoration-underline modal-link <%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>">
               <%= @tour.bathrooms %> BATH
             </span>
           </div>
-          <div class="col-2">
-            <span id="tax_modal_link" class="text-decoration-underline modal-link <%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>">
-              TAXES $<%= @tour.tax %>
+          <div class="col-2 px-0 text-end">
+            <span id="tax_modal_link" style="font-size: 12px"class="text-decoration-underline modal-link <%= @tour.selected_theme == 'dark' ? 'text-white' : ''%>">
+              TAXES <%= @tour.tax %>
             </span>
           </div>
         </div>
         <div class="row no-gutters">
           <div class="col-12">
-          <% if @tour.second_image.nil? %>
-            <a href="javascript:void(0);" id="second_image_modal_link" class="text-decoration-underline modal-link"><img class="card-img-top" src="<%= asset_path('placeholder-image.png') %>"></a>
+          <% if @tour.second_image.nil? || @tour.second_image == '' %>
+            <a href="javascript:void(0);" id="second_image_modal_link" class="text-decoration-underline modal-link"><img class="card-img-top mt-1 mb-3" src="<%= asset_path('placeholder-image.png') %>"></a>
           <% else %>
             <a href="javascript:void(0);" id="second_image_modal_link" class="text-decoration-underline modal-link"><%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.second_image}", style: 'width: 100%' %></a>
           <% end %>
@@ -58,37 +58,33 @@
         </div>
         <div class="row no-gutters">
           <div class="col-4">
-          <% if @tour.third_image.nil? %>
+          <% if @tour.third_image.nil? || @tour.third_image == '' %>
           <a href="javascript:void(0);" id="third_image_modal_link" class="text-decoration-underline modal-link"><img class="card-img-top" src="<%= asset_path('placeholder-image.png') %>"></a>
           <% else %>
             <a href="javascript:void(0);" id="third_image_modal_link" class="text-decoration-underline modal-link"><%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.third_image}", style: 'width: 100%' %></a>
             <% end %>
           </div>
           <div class="col-4">
-          <% p @tour.ninth_image %>
-          <% p 'image' %>
-          <% p @tour %>
-          <% p 'ss' %>
-          <% if @tour.fourth_image.nil? %>
+          <% if @tour.fourth_image.nil? || @tour.fourth_image == '' %>
           <a href="javascript:void(0);" id="fourth_image_modal_link" class="text-decoration-underline modal-link"><img class="card-img-top" src="<%= asset_path('placeholder-image.png') %>"></a>
           <% else %>
             <a href="javascript:void(0);" id="fourth_image_modal_link" class="text-decoration-underline modal-link"><%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.fourth_image}", style: 'width: 100%' %></a>
             <% end %>
           </div>
           <div class="col-4">
-          <% if @tour.fifth_image.nil? %>
-          <a href="javascript:void(0);" id="fifth_image_modal_link" class="text-decoration-underline modal-link"><img class="card-img-top" src="<%= asset_path('placeholder-image.png') %>"></a>
+          <% if @tour.fifth_image.nil? || @tour.fifth_image == '' %>
+          <a href="javascript:void(0);" id="fifth_image_modal_link" class="text-decoration-underline modal-link"><img class="card-img-top " src="<%= asset_path('placeholder-image.png') %>"></a>
           <% else %>
             <a href="javascript:void(0);" id="fifth_image_modal_link" class="text-decoration-underline modal-link"><%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.fifth_image}", style: 'width: 100%' %></a>
             <% end %>
           </div>
         </div>
       </div>
-      <div class="col-6" style="padding-top: 200px">
+      <div class="col-6" style="padding-top: 0px">
         <div class="row no-gutters">
           <div class="col-12" >
-          <% if @tour.sixth_image.nil? %>
-          <a href="javascript:void(0);" id="sixth_image_modal_link" class="text-decoration-underline modal-link"><img class="card-img-top" src="<%= asset_path('placeholder-image.png') %>"></a>
+          <% if @tour.sixth_image.nil? || @tour.sixth_image == '' %>
+          <a href="javascript:void(0);" id="sixth_image_modal_link" class="text-decoration-underline modal-link"><img class="card-img-top mb-3 mt-4" src="<%= asset_path('placeholder-image.png') %>"></a>
           <% else %>
             <a href="javascript:void(0);" id="sixth_image_modal_link" class="text-decoration-underline modal-link"><%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.sixth_image}", style: 'width: 100%' %></a>
             <% end %>
@@ -96,21 +92,21 @@
         </div>
         <div class="row no-gutters">
           <div class="col-4">
-          <% if @tour.seventh_image.nil? %>
+          <% if @tour.seventh_image.nil? || @tour.seventh_image == '' %>
           <a href="javascript:void(0);" id="seventh_image_modal_link" class="text-decoration-underline modal-link"><img class="card-img-top" src="<%= asset_path('placeholder-image.png') %>"></a>
           <% else %>
             <a href="javascript:void(0);" id="seventh_image_modal_link" class="text-decoration-underline modal-link"><%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.seventh_image}", style: 'width: 100%; padding-top: 10px;padding-right: 7.5px' %></a>
             <% end %>
           </div>
           <div class="col-4">
-          <% if @tour.eighth_image.nil? %>
-          <a href="javascript:void(0);" id="eighth_image_modal_link" class="text-decoration-underline modal-link"><img class="card-img-top" src="<%= asset_path('placeholder-image.png') %>"></a>
+          <% if @tour.eighth_image.nil? || @tour.eighth_image == '' %>
+          <a href="javascript:void(0);" id="eighth_image_modal_link" class="text-decoration-underline modal-link"><img class="card-img-top " src="<%= asset_path('placeholder-image.png') %>"></a>
           <% else %>
             <a href="javascript:void(0);" id="eighth_image_modal_link" class="text-decoration-underline modal-link"><%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.eighth_image}", style: 'width: 100%; padding-top: 10px;padding-right: 7.5px' %></a>
             <% end %>
           </div>
           <div class="col-4">
-          <% if @tour.ninth_image.nil? %>
+          <% if @tour.ninth_image.nil? || @tour.ninth_image == '' %>
           <a href="javascript:void(0);" id="ninth_image_modal_link" class="text-decoration-underline modal-link"><img class="card-img-top" src="<%= asset_path('placeholder-image.png') %>"></a>
           <% else %>
             <a href="javascript:void(0);" id="ninth_image_modal_link" class="text-decoration-underline modal-link"><%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.ninth_image}", style: 'width: 100%; padding-top: 10px;padding-right: 7.5px' %></a>
@@ -119,22 +115,22 @@
         </div>
         <div class="row no-gutters">
           <div class="col-4">
-          <% if @tour.tenth_image.nil? %>
-          <a href="javascript:void(0);" id="tenth_image_modal_link" class="text-decoration-underline modal-link"><img class="card-img-top" src="<%= asset_path('placeholder-image.png') %>"></a>
+          <% if @tour.tenth_image.nil? || @tour.tenth_image == '' %>
+          <a href="javascript:void(0);" id="tenth_image_modal_link" class="text-decoration-underline modal-link"><img class="card-img-top my-3" src="<%= asset_path('placeholder-image.png') %>"></a>
           <% else %>
             <a href="javascript:void(0);" id="tenth_image_modal_link" class="text-decoration-underline modal-link"><%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.tenth_image}", style: 'width: 100%; padding-top: 10px;padding-right: 7.5px' %></a>
             <% end %>
           </div>
           <div class="col-4">
-          <% if @tour.eleventh_image.nil? %>
-          <a href="javascript:void(0);" id="eleventh_image_modal_link" class="text-decoration-underline modal-link"><img class="card-img-top" src="<%= asset_path('placeholder-image.png') %>"></a>
+          <% if @tour.eleventh_image.nil? || @tour.eleventh_image == '' %>
+          <a href="javascript:void(0);" id="eleventh_image_modal_link" class="text-decoration-underline modal-link"><img class="card-img-top my-3" src="<%= asset_path('placeholder-image.png') %>"></a>
           <% else %>
             <a href="javascript:void(0);" id="eleventh_image_modal_link" class="text-decoration-underline modal-link"><%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.eleventh_image}", style: 'width: 100%; padding-top: 10px;padding-right: 7.5px' %></a>
             <% end %>
           </div>
           <div class="col-4">
-          <% if @tour.twelfth_image.nil? %>
-          <a href="javascript:void(0);" id="twelfth_image_modal_link" class="text-decoration-underline modal-link"><img class="card-img-top" src="<%= asset_path('placeholder-image.png') %>"></a>
+          <% if @tour.twelfth_image.nil? || @tour.twelfth_image == '' %>
+          <a href="javascript:void(0);" id="twelfth_image_modal_link" class="text-decoration-underline modal-link"><img class="card-img-top my-3" src="<%= asset_path('placeholder-image.png') %>"></a>
           <% else %>
             <a href="javascript:void(0);" id="twelfth_image_modal_link" class="text-decoration-underline modal-link"><%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.twelfth_image}", style: 'width: 100%; padding-top: 10px;padding-right: 7.5px' %></a>
             <% end %>
@@ -142,21 +138,21 @@
         </div>
         <div class="row no-gutters">
           <div class="col-4">
-          <% if @tour.thirteenth_image.nil? %>
+          <% if @tour.thirteenth_image.nil? || @tour.thirteenth_image == '' %>
           <a href="javascript:void(0);" id="thirteenth_image_modal_link" class="text-decoration-underline modal-link"><img class="card-img-top" src="<%= asset_path('placeholder-image.png') %>"></a>
           <% else %>
             <a href="javascript:void(0);" id="thirteenth_image_modal_link" class="text-decoration-underline modal-link"><%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.thirteenth_image}", style: 'width: 100%; padding-top: 10px;padding-right: 7.5px' %></a>
             <% end %>
           </div>
           <div class="col-4">
-          <% if @tour.fourteenth_image.nil? %>
+          <% if @tour.fourteenth_image.nil? || @tour.fourteenth_image == '' %>
           <a href="javascript:void(0);" id="fourteenth_image_modal_link" class="text-decoration-underline modal-link"><img class="card-img-top" src="<%= asset_path('placeholder-image.png') %>"></a>
           <% else %>
             <a href="javascript:void(0);" id="fourteenth_image_modal_link" class="text-decoration-underline modal-link"><%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.fourteenth_image}", style: 'width: 100%; padding-top: 10px;padding-right: 7.5px' %></a>
             <% end %>
           </div>
           <div class="col-4">
-          <% if @tour.fifteenth_image.nil? %>
+          <% if @tour.fifteenth_image.nil? || @tour.fifteenth_image == '' %>
           <a href="javascript:void(0);" id="fifteenth_image_modal_link" class="text-decoration-underline modal-link"><img class="card-img-top" src="<%= asset_path('placeholder-image.png') %>"></a>
           <% else %>
             <a href="javascript:void(0);" id="fifteenth_image_modal_link" class="text-decoration-underline modal-link"><%= image_tag "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.fifteenth_image}", style: 'width: 100%; padding-top: 10px;padding-right: 7.5px' %></a>
