Change design last step

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -52,7 +52,7 @@ body {
   padding: 60px 11.81% 0px 11.81%;
 }
 .pdf-button {
-  padding: 10px 150px;
+  // padding: 10px 150px;
 }
 .section-banner {
   padding: 180px 11.81% 0px 11.81%;
