--- a/app/views/tours/step3.html.erb
+++ b/app/views/tours/step3.html.erb
@@ -1,19 +1,24 @@
 <%= render 'layouts/navigation'%>
 <section class="section mb-5" data-turbolinks="false">
   <div class="container p-0 m-0">
-    <div class="row no-gutters mt-5">
-      <div class="col-6 text-left border-right mb-3 pb-3">
-        <h1></h1>
-        <%= link_to "Preview", preview_path(:tour_id => @tour.id), class:'btn btn-primary pdf-button', :data => {disable_with: "Previewing PDF ..."} %>
+    <div class="row gx-4">
+      <div class="card col-5 px-0" >
+        <img src="<%= @tour.first_image.present? ? "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.first_image}" : '' %>" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Preview PDF</h5>
+          <p class="card-text">Take a sneak peek of your brochure before you approve it for printing.</p>
+          <%= link_to "Preview", preview_path(:tour_id => @tour.id), class:'btn btn-primary w-100', :data => {disable_with: "Previewing PDF ..."} %>
+        </div>
       </div>
-      <div class="col-6 text-left mt-3">
-        <%= link_to "Approve for Printing", create_path(:tour_id => @tour.id), class:'btn btn-primary pdf-button', :data => {disable_with: "Generating PDF ..."} %>
+      <div class="col-2"></div>
+      <div class="card col-5 px-0" >
+        <img src="<%= @tour.first_image.present? ? "https://www.cotala.com/tours/#{@tour.cotala_tour_id}/#{@tour.cotala_tour_id}_#{@tour.first_image}" : '' %>" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Approve PDF</h5>
+          <p class="card-text">Now that you're satisfied with the design and content, it's time to give your final approval for printing.</p>
+        <%= link_to "Approve for Printing", create_path(:tour_id => @tour.id), class:'btn btn-primary w-100', :data => {disable_with: "Generating PDF ..."} %>
+        </div>
       </div>
-      <div class="col-3"></div>
-    </div>
-    <div class="row no-gutters mt-5">
-      <div class="col-3"></div>
-      <div class="col-3"></div>
     </div>
   </div>
 </section>
