--- a/app/views/tours/first_page/_first_image_modal.html.erb
+++ b/app/views/tours/first_page/_first_image_modal.html.erb
@@ -49,6 +49,7 @@
           $(this).addClass("selected-image");
         }
         $("#tour_first_image").val($(".selected-image").data("image-id"));
+        $('.save-image').click();
     });
   })
 </script>
